--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,7 @@ http {
 
     server {
         listen 80;
-        server_name yourdomain.com www.yourdomain.com;
+        server_name jajanin.online www.jajanin.online;
         
         # Redirect HTTP to HTTPS
         return 301 https://$server_name$request_uri;
@@ -25,7 +25,7 @@ http {
 
     server {
         listen 443 ssl http2;
-        server_name yourdomain.com www.yourdomain.com;
+        server_name jajanin.online www.jajanin.online;
 
         # SSL certificates (use Let's Encrypt)
         ssl_certificate /etc/nginx/certs/fullchain.pem;
